--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -7,6 +7,7 @@
 #  updated_at :datetime         not null
 #  title      :string
 #  body       :text
+#  user       :reference
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
