--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -7,7 +7,7 @@
 #  updated_at :datetime         not null
 #  title      :string
 #  body       :text
-#  user       :reference
+#  user_id    :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
